cluster-init-apps/argo-cd/templates/disable-http3-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-disable-http3
  namespace: argocd-system
spec:
  headers:
    customResponseHeaders:
      Alt-Svc: ""
