cluster-init-apps/argo-cd/templates/server-ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd-system
  annotations:
    kubernetes.io/ingress.class: "traefik"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/widget.type: "argocd"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.framsburg.ch`) && PathPrefix(`/`) && HeaderRegexp(`Content-Type`, `application/grpc.*`)
      priority: 11
      middlewares:
        - name: argocd-disable-http3
      services:
        - name: argo-cd-argocd-server
          port: 80
          scheme: h2c
    - kind: Rule
      match: Host(`argocd.framsburg.ch`) && PathPrefix(`/`)
      priority: 10
      middlewares:
        - name: argocd-disable-http3
      services:
        - name: argo-cd-argocd-server
          port: 80
  tls:
    secretName: argocd-framsburg-ch-tls
