cluster-init-apps/argo-cd/templates/webhook-callback-ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-external-callback-http-external
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: nginx
  rules:
    - host: argocd-callback.framsburg.ch
      http:
        paths:
          - path: /api/webhook
            pathType: Prefix
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  name: http
  tls:
    - hosts:
      - argocd-callback.framsburg.ch
      secretName: argocd-callback-framsburg-ch-tls-external
